<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/menuback">
    <LinearLayout
        android:gravity="center"
        android:id="@+id/menu_search"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:scaleType="centerInside"
            android:src="@drawable/search_alt"
            android:padding="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"></ImageView>
        <TextView
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TextView>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/menu_map"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/map"
            android:layout_width="40dp"
            android:layout_height="40dp"></ImageView>
        <TextView
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/map_title"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TextView></LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/menu_account"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/user_alt_light"
            android:layout_width="40dp"
            android:layout_height="40dp"></ImageView>
        <TextView
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TextView></LinearLayout>

</LinearLayout>