<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back"
    tools:context=".Search.SearchResultFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"></androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95">
    </androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/institution"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/search_result_history"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:gravity="top"
        android:background="@drawable/search_hint_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <TextView
            android:id="@+id/search_hint"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/search_list"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/list_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6_1">

        <include
            android:id="@+id/search_result_list"
            layout="@layout/fragment_parking_item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"></include>

        <TextView
            android:visibility="gone"
            android:id="@+id/search_result_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_background"
            android:gravity="center"
            android:text="@string/data_null"
            android:textColor="@color/gray"
            android:textSize="32dp"
            android:textStyle="bold"></TextView>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>