<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back"
    tools:context=".Account.MypageFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"></androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"></androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8">
        <ImageView
            android:id="@+id/profile_img"
            android:layout_margin="16dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/defualt_img"
            android:layout_gravity="center_vertical"></ImageView>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/profile_text1"></TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/profile_text2">
                </TextView>
                <TextView
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:text="@string/profile_text2"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/blue1"
                        android:textColor="@color/white"
                        android:padding="2dp"
                        android:textSize="16dp"
                        android:textStyle="normal"
                        android:text="@string/profile_text3"></TextView>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/my_place"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="경기도 성남시"></TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/car"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/list_background"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"></androidx.constraintlayout.widget.Guideline>

        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/blue1"
                android:textStyle="bold"
                android:text="@string/search_list">
            </TextView>
            <View
                android:layout_weight="2"
                android:layout_width="1dp"
                android:layout_height="match_parent"></View>
            <ImageView
                android:id="@+id/my_searchlist_iv"
                android:layout_weight="1"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/add">
            </ImageView>
        </LinearLayout>

        <include
            android:id="@+id/list"
            android:layout_margin="16dp"
            layout="@layout/fragment_search_list_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline12"></include>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/logout_view"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20dp"
            android:textColor="@color/gray"
            android:textStyle="bold"></TextView>
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/gray"></View>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>